tests/specs/ecosystem/stump/adapter_filesystem/0_0_1.test
stump/adapter-filesystem/0.0.1
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: npm package '@jsr/stump__core' does not exist.
    at file://<tmpdir>/src/base.ts:1:62

